@@ -171,3 +171,4 @@ sto (SF id)
 Janny Au, Avocent
 -----------------
 10/14/2010 [ 3086143 ] set cmpi status in getPropQualifier
+10/14/2010 [ 3086145 ] check datetime format in chars2bin
